# gurobi_python_wrap

./: CMakeLists.txt  FindGUROBI.cmake  Findglpk.cmake  README.md  qp.cpp  qpg.cpp  qpp.cpp  solveLP.cpp  solveMIP.cpp
